# komix

./: .gitignore  AGENTS.MD  DEVELOPMENT.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
hook/: build.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: comic.dart  reader_snapshot.dart
lib/object_box/: model.dart  object_box.dart
lib/pages/: comic_detail_page.dart  download_chapter_selection_page.dart  downloads_page.dart  main_page.dart  reader_page.dart  reader_page_content.dart  reader_page_overlays.dart  reader_page_status_views.dart  system_settings_page.dart
lib/providers/: base_provider.dart  bika_provider.dart  jm_provider.dart  provider_registry.dart
lib/reader/: image_size_cache_store.dart  image_size_cubit.dart  reader_action_controller.dart  reader_chapter_navigation_controller.dart  reader_chapter_view_state.dart  reader_cubit.dart  reader_gesture_logic.dart  reader_history_manager.dart  reader_image_loader.dart  reader_image_view.dart  reader_initial_page_restorer.dart  reader_keyboard_shortcuts.dart  reader_layout_metrics.dart  reader_page_info_overlay.dart  reader_position_controller.dart  reader_progress_controller.dart  (+4 more)
linux/: CMakeLists.txt
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: bridge.rs  frb_generated.rs  lib.rs
rust/src/api/: http.rs  mod.rs
rust/src/api/bika/: mod.rs
rust/src/api/jm/: crypto.rs  mod.rs
rust/src/decode/: decode.rs  mod.rs  segmentation.rs
test/: widget_test.dart
windows/: CMakeLists.txt
(+45 files in other folders)
