[package]
name = "komix_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# HTTP 客户端
reqwest = { version = "0.13.4", default-features = false, features = [
    "http2",
    "json",
    "query",
    "stream",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
    "multipart",
    "rustls",
    "system-proxy",
    "socks",
] }
# 异步运行时
tokio = { version = "1.42", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 错误处理
anyhow = "1.0"
thiserror = "2.0"
# 加密
md-5 = "0.11.0"
aes = "0.8"
hmac = "0.12"
sha2 = "0.10"
# 图片处理
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
webp = "0.3.1"
# Base64 编解码
base64 = "0.22"
# HTML 解析
scraper = "0.21"
# Flutter Rust Bridge
flutter_rust_bridge = "=2.12.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
rustls-platform-verifier = "0.7.0"

[build-dependencies]
flutter_rust_bridge_codegen = "=2.12.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
